Skeleton for inter-server communication in place.